fixed image alignment

--- a/src/style.css
+++ b/src/style.css
@@ -52,7 +52,3 @@ p {
 p.caption {
   font-size: 16px;
 }
-
-img.medium-caption {
-  width: 275px;
-}
